Finalizing and removing placeholder.

--- a/public/deduchelp.html
+++ b/public/deduchelp.html
@@ -7,6 +7,8 @@
 
 <body>
 
+
+<div class = "helper">
 In case of an accident/theft, Privateaser applies a 5000€ deductible.
 <br/>
 
@@ -18,7 +20,7 @@ The booker is charged an additional 1€/person when he chooses the deductible r
 <br/>
 
 The additional charge goes to Privateaser, not to the bar.
-
+<div/>
 
 </body>
 
