--- a/public/help.html
+++ b/public/help.html
@@ -7,7 +7,18 @@
 
 <body>
 
-Real mens don't need help. (placeholder)
+
+<div class = "helper">
+Enter all the informations about the bar on the RED part <br/> <br/>
+
+Enter all the information about your group on the BLUE part <br/> <br/>
+
+Once done, press the COMPUTE button to calculate the price. <br/> <br/>
+
+BOOKER DEBIT is the amount you'll need to pay Privateaser , PRIVATEASER will then handle the rest and distribute the amount accordingly! <br/>
+The precise distribution is listed in the GREEN part. <br/>
+</div>
+
 
 </body>
 
